@@ -5,8 +5,8 @@ defaults = { 'readingdelta': 10,
              'brightness_bar': 'yellow',
              'autodim': True,
              'autodimdelta': 0.5,
-             'dark': 10,
-             'bright': 80,
+             'dark': 50,
+             'bright': 700,
              'fetchsuntime': '3:00',
              'specialtriggers': { 'dark': 'ScreenOff', 'bright': 'ScreenOn:200', 'dim': 'ScreenOn:100' },
              'timedtriggers': [], 
@@ -14,10 +14,12 @@ defaults = { 'readingdelta': 10,
              'weekend': ['Saturday', 'Sunday'],
              'which_sensor': 'BME280',
              'i2c_port': 1,
-             'bme_address': 0x76,
+             'bme280_address': 0x76,
              'bme280_sampling': 4,
              'sensehat_adjust': True,
              'sensehat_factor': 8.199,
+             'which_camera': 'ambient',
+             'ambient_address': 0x23,
              'pressuredelta': 180,
              'pressurerapid': 10,
              'pressureregular': 3,
