@@ -1,10 +1,11 @@
 v~2.0.0~beta16
-- added support for BME280 sensor
+- added support for BME280 Temperature, Humidity, Pressure sensor
+- added support for i2c ambient light sensor 
 - SenseHat now returns lower of two temps from pressure and humidity sensors
 - sends None to Kodi if sensor does not return data
 
 v.2.0.0~beta15
-- added brightness level indicator on LED
+- added brightness level indicator on SenseHat LED
 
 v.2.0.0~beta14
 - fix for getting sunrise/sunset running multiple times in a row
